src files added

--- a/Makefile_linux
+++ b/Makefile_linux
@@ -6,7 +6,7 @@
 #    By: ixu <ixu@student.hive.fi>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/02/09 11:00:23 by ixu               #+#    #+#              #
-#    Updated: 2024/02/09 14:17:17 by ixu              ###   ########.fr        #
+#    Updated: 2024/02/16 13:57:30 by ixu              ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,7 +18,9 @@ LIBFT = $(LIBFT_DIR)/libft.a
 
 CFLAGS = -Wall -Wextra -Werror
 
-SRCS = main.c
+SRCS = main.c \
+		parcer-main.c \
+		runcmd.c
 
 OBJS = $(SRCS:.c=.o)
 
