sigle quotes and text in args. redirects restored

--- a/Makefile_testparser
+++ b/Makefile_testparser
@@ -13,6 +13,7 @@ SRCS = testparser.c \
 		parser/parseexec.c \
 		parser/parsecmd.c \
 		parser/parsing_utils.c
+		parser/runcmd_test.c
 
 OBJS = $(SRCS:.c=.o)
 
@@ -21,10 +22,10 @@ all: $(NAME)
 #$(NAME): $(OBJS) $(LIBFT)
 #	cc -o $(NAME) $(OBJS) $(LIBFT) -L$(RL_DIR) -lreadline -L$(LIBFT_DIR) -lft
 $(NAME): $(OBJS) $(LIBFT)
-	cc -o $(NAME) $(OBJS) $(LIBFT) -L$(RL_DIR) -lreadline -I ~/.brew/opt/readline/include -L ~/.brew/opt/readline/lib -L$(LIBFT_DIR) -lft
+	cc -g -o $(NAME) $(OBJS) $(LIBFT) -L$(RL_DIR) -lreadline -I ~/.brew/opt/readline/include -L ~/.brew/opt/readline/lib -L$(LIBFT_DIR) -lft
 
 %.o: %.c
-	cc -c $< -o $@ -I ~/.brew/opt/readline/include
+	cc -g -c $< -o $@ -I ~/.brew/opt/readline/include
 	#cc $(CFLAGS) -c $< -o $@ -I ~/.brew/opt/readline/include
 
 $(LIBFT):
